[gd_scene load_steps=4 format=3 uid="uid://b87cqyunlhsul"]

[ext_resource type="Script" path="res://level/base_level/base_level.gd" id="1_v4pmm"]
[ext_resource type="Resource" uid="uid://dyfg2qodnx83r" path="res://saved_data/saved_data.tres" id="2_f4fbj"]
[ext_resource type="PackedScene" uid="uid://bqflvi2xo4pkv" path="res://scenes/game_camera/game_camera.tscn" id="2_go2xw"]

[node name="BaseLevel" type="Node2D"]
script = ExtResource("1_v4pmm")
game_settings = ExtResource("2_f4fbj")

[node name="GameCamera" parent="." instance=ExtResource("2_go2xw")]
unique_name_in_owner = true

[node name="Background" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188969, 0.188969, 0.188969, 1)

[node name="ParallaxArea" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="LevelSegments" type="Node2D" parent="."]
unique_name_in_owner = true
